--- a/samples/04_julia/CMakeLists.txt
+++ b/samples/04_julia/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright (c) 2021-2022 Ben Ashbaugh
+# Copyright (c) 2021 Ben Ashbaugh
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -18,29 +18,8 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
-
-set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-if (NOT CMAKE_BUILD_TYPE)
-    message(STATUS "No build type selected, default to Release")
-    set(CMAKE_BUILD_TYPE "Release" CACHE PATH "Build Type" FORCE)
-endif()
-
-set_property(GLOBAL PROPERTY USE_FOLDERS ON)
-
-project(SimpleSYCLSamples VERSION 1.0)
-
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
-
-if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
-    enable_testing()
-endif()
-
-add_subdirectory(samples)
-
-if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
-    set(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/install" CACHE PATH "Install Path" FORCE)
-endif()
+add_sycl_sample(
+    TEST
+    NUMBER 04
+    TARGET julia
+    SOURCES main.cpp )
