--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -66,5 +66,6 @@ endfunction()
 add_subdirectory( 00_enumsycl )
 add_subdirectory( 00_hellosycl )
 add_subdirectory( 04_julia )
+add_subdirectory( 10_queueexperiments )
 
 add_subdirectory( dpcpp )
