fixes for the 2023.0 compilers

--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -43,8 +43,8 @@ function(add_sycl_sample)
     target_link_libraries(${SYCL_SAMPLE_TARGET} PRIVATE sycl -fsycl)
 
     if(SAMPLES_BUILD_CUDA)
-        target_compile_options(${SYCL_SAMPLE_TARGET} PRIVATE -fsycl-targets=nvptx64-nvidia-cuda)
-        target_link_libraries(${SYCL_SAMPLE_TARGET} PRIVATE -fsycl-targets=nvptx64-nvidia-cuda)
+        target_compile_options(${SYCL_SAMPLE_TARGET} PRIVATE -fsycl-targets=spir64,nvptx64-nvidia-cuda)
+        target_link_libraries(${SYCL_SAMPLE_TARGET} PRIVATE -fsycl-targets=spir64,nvptx64-nvidia-cuda)
     endif()
 
     if (WIN32)
