--- a/samples/usm/CMakeLists.txt
+++ b/samples/usm/CMakeLists.txt
@@ -21,9 +21,11 @@
 add_subdirectory( 00_usmqueries )
 
 add_subdirectory( 100_dmemhelloworld )
+add_subdirectory( 101_dmemlinkedlist )
 add_subdirectory( 200_hmemhelloworld )
 add_subdirectory( 201_hmemlinkedlist )
 add_subdirectory( 300_smemhelloworld )
+add_subdirectory( 301_smemlinkedlist )
 add_subdirectory( 400_sysmemhelloworld )
 
 add_subdirectory( 500_bigalloc )
