--- a/samples/dpcpp/usm/CMakeLists.txt
+++ b/samples/dpcpp/usm/CMakeLists.txt
@@ -21,6 +21,7 @@
 add_subdirectory( 00_usmqueries )
 
 add_subdirectory( 100_dmemhelloworld )
+add_subdirectory( 101_dmemcachehint )
 add_subdirectory( 200_hmemhelloworld )
 add_subdirectory( 300_smemhelloworld )
 add_subdirectory( 400_sysmemhelloworld )
