--- a/samples/dpcpp/CMakeLists.txt
+++ b/samples/dpcpp/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright (c) 2020 Ben Ashbaugh
+# Copyright (c) 2020-2025 Ben Ashbaugh
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -19,3 +19,5 @@
 # SOFTWARE.
 
 add_subdirectory( usm )
+
+add_subdirectory( 10_annotated_pointers)
